# maxian-desktop

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
maxian-core/: README.md  package-lock.json  package.json  tsconfig.json
maxian-core/src/: index.ts
maxian-core/src/agents/: AgentOrchestrator.ts  AgentTypes.ts  ExecuteAgent.ts  ExploreAgent.ts  PlanAgent.ts  index.ts
maxian-core/src/api/: aiProxyHandler.ts  apiFactory.ts  difyHandler.ts  qwenHandler.ts  types.ts
maxian-core/src/assistant-message/: AssistantMessageParser.ts  NativeToolCall.ts  index.ts  parseAssistantMessage.ts  presentAssistantMessage.ts
maxian-core/src/checkpoints/: index.ts  (+3 more)
maxian-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
maxian-desktop/docs/: plugin-dev.md
maxian-desktop/scripts/: make-dmg.mjs  sync-sidecar.mjs
maxian-desktop/src/: App.tsx  api.ts  i18n.ts  main.tsx  markdown.ts  styles.css
maxian-desktop/src-tauri/: Cargo.toml  tauri.conf.json
maxian-desktop/src-tauri/capabilities/: default.json
maxian-desktop/src-tauri/icons/: icon.icns
maxian-desktop/src-tauri/src/: lib.rs  main.rs
maxian-sdk/: package.json  tsconfig.json
maxian-sdk/src/: index.ts
maxian-server/: package-lock.json  package.json  test-client.html  tsconfig.json
maxian-server/scripts/: build-bin.mjs
maxian-server/src/: bootstrap.ts  cli.ts  contextCompaction.ts  database.ts  index.ts  pluginLoader.ts  projectConfig.ts  server.ts  sessionManager.ts  storage.ts  types.ts  workspaceManager.ts
maxian-server/test/: auto-test.mjs
(+131 files in other folders)
